<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:transitionName="@string/main_trans_imgname"
    android:layout_height="match_parent"><!--把transitionName属性设置到TextDrawer上怎么也不触发draw事件，移到这里就好了，另这个属性不一定与显示图片的是同一控件-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.coolstar.makeposter.widget.textposter.TextDrawer
            android:id="@+id/poster_drawer"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <RelativeLayout
            android:id="@+id/poster_bottom_panel"
            android:layout_width="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_height="200dp">
            <View
                android:id="@+id/poster_bottom_headerline"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/alpha_colorAccent"/>
            <LinearLayout
                android:id="@+id/poster_bottom_tabpanel"
                android:layout_below="@id/poster_bottom_headerline"
                android:layout_width="match_parent"
                android:layout_height="40dp">
                <TextView
                    android:id="@+id/poster_tab_text"
                    android:text="@string/poster_tab_text"
                    android:textColor="@android:color/white"
                    android:shadowColor="@android:color/darker_gray"
                    android:textSize="@dimen/poster_tab_txtsize"
                    android:layout_width="0dp"
                    android:background="@drawable/poster_tab_bg"
                    android:gravity="center"
                    android:layout_marginLeft="1dp"
                    android:layout_marginRight="1dp"
                    android:layout_weight="1"
                    android:layout_height="40dp" />
                <TextView
                    android:id="@+id/poster_tab_font"
                    android:text="@string/poster_tab_font"
                    android:textColor="@android:color/white"
                    android:shadowColor="@android:color/darker_gray"
                    android:background="@drawable/poster_tab_bg"
                    android:textSize="@dimen/poster_tab_txtsize"
                    android:gravity="center"
                    android:layout_marginLeft="1dp"
                    android:layout_marginRight="1dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="40dp" />
                <TextView
                    android:id="@+id/poster_tab_color"
                    android:text="@string/poster_tab_color"
                    android:textColor="@android:color/white"
                    android:shadowColor="@android:color/darker_gray"
                    android:background="@drawable/poster_tab_bg"
                    android:textSize="@dimen/poster_tab_txtsize"
                    android:gravity="center"
                    android:layout_marginLeft="1dp"
                    android:layout_marginRight="1dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="40dp" />
                <TextView
                    android:id="@+id/poster_tab_style"
                    android:text="@string/poster_tab_style"
                    android:textColor="@android:color/white"
                    android:shadowColor="@android:color/darker_gray"
                    android:textSize="@dimen/poster_tab_txtsize"
                    android:layout_width="0dp"
                    android:background="@drawable/poster_tab_bg"
                    android:gravity="center"
                    android:layout_marginLeft="1dp"
                    android:layout_marginRight="1dp"
                    android:layout_weight="1"
                    android:layout_height="40dp" />
            </LinearLayout>
            <FrameLayout
                android:id="@+id/poster_bottom_content"
                android:layout_below="@id/poster_bottom_tabpanel"
                android:background="@color/colorPrimaryDark"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <include
                    android:id="@+id/poster_menu_text"
                    layout="@layout/include_poster_menu_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="invisible"
                    />
                <include
                    android:id="@+id/poster_menu_font"
                    layout="@layout/include_poster_menu_font"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="invisible"
                    />
                <include
                    android:id="@+id/poster_menu_color"
                    layout="@layout/include_poster_menu_color"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:visibility="invisible"
                    />
                <include
                    android:id="@+id/poster_menu_style"
                    layout="@layout/include_poster_menu_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="invisible"
                    />
            </FrameLayout>
        </RelativeLayout>
    </RelativeLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/poster_add"
        android:src="@android:drawable/ic_dialog_map"
        app:layout_anchor="@id/poster_bottom_panel"
        app:layout_anchorGravity="right|top"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        app:rippleColor="@color/colorPrimary"
        app:layout_behavior="com.coolstar.makeposter.widget.DependentBehavior"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>